# CPPAMP_clients

./: README.md
simple_sgemm_array/: AMP_SGEMM_MAIN.cpp  CMakeLists.txt  FindHCC.cmake  build.sh  cppAMP_sgemm.cpp  cppAMP_sgemm.h  dummy_sgemm.h  error_checking.cpp  error_checking.h  init_random.cpp  init_random.h
simple_sgemm_array_view/: AMP_SGEMM_MAIN.cpp  CMakeLists.txt  FindHSA.cmake  build_kernel_online.sh  build_lib.sh  build_online.sh  cppAMP_sgemm.cpp  cppAMP_sgemm.h  dummy_sgemm.c  error_checking.cpp  init_random.cpp
